--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta charset="utf-8"/>
-    <script src="twSeriesGen.js"></script>
+    <script src="scripts/twSeriesGenLib.js"></script>
 </head>
 <body onload='DoOnLoad();'>
 <script>
